Fix submarker wrap direction in left case

--- a/src/locationTracker/mapTracker/Marker.module.css
+++ b/src/locationTracker/mapTracker/Marker.module.css
@@ -40,6 +40,7 @@
 
     &.left {
         left: calc(var(--map-marker-x) - var(--map-marker-size) / 2);
+        flex-wrap: wrap-reverse;
     }
 
     .submarker {
